<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSimple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.arpad.fragmentdemo.SimpleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="3"
        android:text="@string/hello_simple_fragment"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/et_value_hint" />

    <Button
        android:id="@+id/btnToBlankFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_to_blank_fragment_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnToMainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_to_main_fragment_text"
        android:textSize="24sp" />
</LinearLayout>
