<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.arpad.fragmentdemo.MainFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:text="@string/hello_main_fragment"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/fragment_main_tvvalue_hint"
        android:textSize="32sp"/>
    <Button
        android:id="@+id/btnToBlankFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/fragment_main_btn_to_blank_fragment_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnToSimpleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/fragment_main_btn_to_simple_fragment_text"
        android:textSize="24sp" />

</LinearLayout>
