<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentBlank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context="com.example.arpad.fragmentdemo.BlankFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:text="@string/hello_blank_fragment"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnToSimpleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_to_simple_fragment_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnToMainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_to_main_fragment_text"
        android:textSize="24sp" />
</LinearLayout>
